--- a/bkmarker/bkmarker.csproj
+++ b/bkmarker/bkmarker.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.24" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.14" />
+    <PackageReference Include="OneOf" Version="3.0.263" />
+  </ItemGroup>
+
 </Project>
