--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,7 @@ services:
     - "80:80"
 
   bkmarker_web:
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    image: bkmarker
     ports:
     - 4000:8080
     environment:
