--- a/bkmarker/bkmarker.csproj
+++ b/bkmarker/bkmarker.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Dapper" Version="2.1.24" />
     <PackageReference Include="FluentMigrator" Version="5.0.0" />
     <PackageReference Include="FluentMigrator.Runner.SQLite" Version="5.0.0" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.55" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
     <PackageReference Include="OneOf" Version="3.0.263" />
   </ItemGroup>
